--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://IshantSingh27.github.io/My-Portfolio",
   "name": "ishant-portfolio",
   "version": "0.1.0",
   "private": true,
